--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@vercel/nft": "^1.1.1",
     "@vitejs/plugin-react": "^5.1.0",
+    "chrome-aws-lambda": "^10.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "puppeteer": "^24.33.0",
+    "puppeteer-core": "^24.33.0",
     "vite": "^7.2.2"
   }
 }
