--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:seo",
+  "buildCommand": "npm run build",
   "cleanUrls": true,
   "trailingSlash": false,
   "rewrites": [
@@ -15,6 +15,10 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "X-Robots-Tag",
+          "value": "index, follow"
         }
       ]
     },
